--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <main>
     <section class="description">
       <h1>ПОМОГИ ЛЯГУШКЕ</h1>
+      <h2>Лавка с магическими зельями " Снадобь"
       <a href="" class="button24">Купить зелье</a>
         <a href="" class="button25">Все о лавке</a>
     </section>
