--- a/index.html
+++ b/index.html
@@ -36,47 +36,48 @@
   </ul>
   </div>
   <div class="lal">
-    <img src="file:///C:/Users/%D0%98%D0%B3%D0%BE%D1%80%D1%8C/Desktop/web-poster-master/%D0%B2%D0%B5%D0%B1-%D0%BF%D0%BB%D0%B0%D0%BA%D0%B0%D1%82/styles/image/la.svg" alt="1" class="la">
-    <img src="file:///C:/Users/%D0%98%D0%B3%D0%BE%D1%80%D1%8C/Desktop/web-poster-master/%D0%B2%D0%B5%D0%B1-%D0%BF%D0%BB%D0%B0%D0%BA%D0%B0%D1%82/styles/image/tra.svg" alt="2" class="tra">
-    <img src="file:///C:/Users/%D0%98%D0%B3%D0%BE%D1%80%D1%8C/Desktop/web-poster-master/%D0%B2%D0%B5%D0%B1-%D0%BF%D0%BB%D0%B0%D0%BA%D0%B0%D1%82/styles/image/tral.svg" alt="3" class="tral">
+    <img src="styles/image/la.svg" alt="1" class="la">
+    <img src="styles/image/tra.svg" alt="2" class="tra">
+    <img src="styles/image/tral.svg" alt="3" class="tral">
   </div>
 <main>
     <section class="description">
       <h1>ПОМОГИ ЛЯГУШКЕ</h1>
-      <h2>Лавка с магическими зельями " Снадобь"
+      <h2>Лавка с магическими зельями  " Снадобь"
       <a href="" class="button24">Купить зелье</a>
         <a href="" class="button25">Все о лавке</a>
     </section>
-
+<div class="grid-1">
       <section id="" class="letters">
       <div class="panel1">
-      <img src="file:///C:/Users/%D0%98%D0%B3%D0%BE%D1%80%D1%8C/Desktop/web-poster-master/%D0%B2%D0%B5%D0%B1-%D0%BF%D0%BB%D0%B0%D0%BA%D0%B0%D1%82/styles/image/tra.svg" alt="img" class="img">
+      <img src="styles/image/tra.svg" alt="img" class="img">
       <h2>Зелье</h2>
       </div>
 
       <div class="panel2">
-<img src="file:///C:/Users/%D0%98%D0%B3%D0%BE%D1%80%D1%8C/Desktop/web-poster-master/%D0%B2%D0%B5%D0%B1-%D0%BF%D0%BB%D0%B0%D0%BA%D0%B0%D1%82/styles/image/tra.svg" alt="img" class="img">
+<img src="styles/image/tra.svg" alt="img" class="img">
         <h2>Мотыльки</h2>
       </div>
       <div class="panel3">
-<img src="file:///C:/Users/%D0%98%D0%B3%D0%BE%D1%80%D1%8C/Desktop/web-poster-master/%D0%B2%D0%B5%D0%B1-%D0%BF%D0%BB%D0%B0%D0%BA%D0%B0%D1%82/styles/image/tra.svg" alt="img" class="img">
+<img src="styles/image/tra.svg" alt="img" class="img">
         <h2>Зелье</h2>
       </div>
       <div class="panel4">
-<img src="file:///C:/Users/%D0%98%D0%B3%D0%BE%D1%80%D1%8C/Desktop/web-poster-master/%D0%B2%D0%B5%D0%B1-%D0%BF%D0%BB%D0%B0%D0%BA%D0%B0%D1%82/styles/image/tra.svg" alt="img" class="img">
+<img src="styles/image/tra.svg" alt="img" class="img">
         <h2>Жук-навозник</h2>
       </div>
       <div class="panel5">
-<img src="file:///C:/Users/%D0%98%D0%B3%D0%BE%D1%80%D1%8C/Desktop/web-poster-master/%D0%B2%D0%B5%D0%B1-%D0%BF%D0%BB%D0%B0%D0%BA%D0%B0%D1%82/styles/image/tra.svg" alt="img" class="img">
+<img src="styles/image/tra.svg" alt="img" class="img">
         <h2>Зелье</h2>
       </div>
 
       <div class="panel6">
 
-        <img src="file:///C:/Users/%D0%98%D0%B3%D0%BE%D1%80%D1%8C/Desktop/web-poster-master/%D0%B2%D0%B5%D0%B1-%D0%BF%D0%BB%D0%B0%D0%BA%D0%B0%D1%82/styles/image/tra.svg" alt="img" class="img">
+        <img src="styles/image/tra.svg" alt="img" class="img">
 <h2>Гриб</h2>
       </div>
     </section>
+  </div>
   </main>
 </body>
 </html>
